--- a/overwatch-analysis.Rmd
+++ b/overwatch-analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Data Analysis Project - Explaining the Overwatch Skill Rating"
+title: "Data Analysis Project - How to Increase your Overwatch Skill Rating"
 author: "Brian Deignan (deignan3) & Kai Chang (kaihc2)"
 date: 'July 29, 2019'
 output:
@@ -10,12 +10,14 @@ output:
 urlcolor: cyan
 ---
 
+![Overwatch heroes in action](ow6.jpg)
+
 ***
 
 ## Explaining the Overwatch Skill Rating
 
 ### Introduction
-Our dataset consists of information on gamers who play the video game Overwatch on Playstation 4. [Overwatch](https://en.wikipedia.org/wiki/Overwatch_(video_game)) is a team-based multiplayer first-person shooter developed and published by Blizzard Entertainment. Overwatch assigns players into two teams of six, with each player selecting from a roster of 30 characters, known as "heroes", each with a unique style of play whose roles are divided into three general categories that fit their role. Players on a team work together to secure and defend control points on a map or escort a payload across the map in a limited amount of time. 
+Our dataset consists of information on competitive gamers who play the video game Overwatch on Playstation 4. [Overwatch](https://en.wikipedia.org/wiki/Overwatch_(video_game)) is a team-based multiplayer first-person shooter developed and published by Blizzard Entertainment. Overwatch assigns players into two teams of six, with each player selecting from a roster of 30 characters, known as "heroes", each with a unique style of play whose roles are divided into three general categories that fit their role. Players on a team work together to secure and defend control points on a map or escort a payload across the map in a limited amount of time. 
 
 Overwatch has a large community and E-Sports presence online. Players' skill in competitive games is calculated by a "secret" formula at Blizzard that leads to a "skill rating", or "SR" for short. SR ranges from 0 to 5,000, the higher the score the better the player.
 
